@@ -4,6 +4,7 @@
  - Implement station order.
  - Rewrite XML map to new version with line IDs.
  - Update Module::Install to 1.18 version.
+ - Update author name.
 
 0.05 2015-10-16T11:57:49+02:00
  - Improve comment in xml file.
